--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-input-mask": "^3.0.1",
     "@types/react-redux": "^7.1.23",
     "@types/redux-form": "^8.3.3",
     "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.24",
+    "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
