--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sk-design",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vakhant.github.io/sk-design/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -16,6 +17,7 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.24",
     "axios": "^0.26.1",
+    "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
@@ -32,7 +34,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
